--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -56,7 +56,7 @@ a {
 
 .container-login {
 	width: 32%;
-	height: 75%;
+	height: 70%;
 	padding: 3.5rem 5.5rem;
 
 	display: flex;
@@ -123,8 +123,8 @@ label {
 }
 
 .password-control {
-	background: url("/img/svg/View.svg");
-	/* background: url(../img/svg/View.svg); */
+	background: url("/img/icons/View.svg");
+	/* background: url(../img/icons/View.svg); */
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -137,8 +137,8 @@ label {
 }
 
 .password-control.view {
-	background-image: url("/img/svg/Noview.svg");
-	/* background: url(../img/svg/Noview.svg); */
+	background-image: url("/img/icons/Noview.svg");
+	/* background: url(../img/icons/Noview.svg); */
 }
 
 .login-button {
@@ -192,8 +192,8 @@ label {
 }
 
 .check::before{
-	content: url('/img/svg/cruz.svg');
-	/* content: url('../img/svg/cruz.svg'); */
+	content: url('/img/icons/Cruz.svg');
+	/* content: url('../img/icons/cruz.svg'); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -209,8 +209,8 @@ label {
 }
 
 .check-switch input:checked + .check::before{
-	content: url('/img/svg/checked.svg');
-	/* content: url('../img/svg/checked.svg'); */
+	content: url('/img/icons/Checked.svg');
+	/* content: url('../img/icons/checked.svg'); */
 	left: 22px;
 	opacity: 1;
 	transition: all .2s ease-in-out;
