--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -23,7 +23,7 @@
   <nav></nav>
 
   <main>
-    <a href="#" class="volver">
+    <a th:href="@{/semillas}" class="volver">
       <img src="../../static/img/icons/Volver.svg" alt="volver">
       <span>Volver</span>
     </a>
@@ -63,22 +63,20 @@
         <span class="campo">Turno:</span>
         <span class="valor">Tarde (17:00 - 21:00)</span>
       </div>
-
     </div>
 
-    <button
-    data-ripple-light="true"
-    data-popover-target="popover-bottom"
-    class="middle none center rounded-lg bg-gradient-to-tr from-pink-600 to-pink-400 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-  >
-    Bottom
-  </button>
-  <div
-    data-popover="popover-bottom"
-    data-popover-placement="bottom"
-    class="absolute z-10 w-max whitespace-normal break-words rounded-lg border border-blue-gray-50 bg-white p-4 font-sans text-sm font-normal text-blue-gray-500 shadow-lg shadow-blue-gray-500/10 focus:outline-none"
-  >
-    This is a very beautiful popover, show some love.
+    <!-- observaciones -->
+    <button data-ripple-light="true" data-popover-target="menu" class="observaciones-menu">Observaciones generales
+    </button>
+
+    <div role="menu" data-popover="menu" data-popover-placement="bottom" class="observaciones-form-container">
+      <form role="menuitem" class="observaciones-form">
+        <!-- <input role="menuitem" type="text"> -->
+        <textarea role="menuitem" name="observacion" cols="1" rows="4"></textarea>
+        <button role="menuitem" type="submit">Enviar</button>
+      </form>
+    </div>
+    
   </div>
   </main>
   
@@ -89,9 +87,7 @@
 
   <!-- MATERIAL TAILWIND CDN -->
   <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
-  <script
-  type="module"
-  src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"
-></script>
+  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
 </body>
+
 </html>
