--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -93,5 +93,12 @@
   type="module"
   src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"
 ></script>
+
+<!-- GUIA PARA APLICAR THYMELEAF EN VARIABLES JS: https://stackoverflow.com/questions/25687816/setting-up-a-javascript-variable-from-spring-model-by-using-thymeleaf -->
+  <script th:inline="javascript">
+    let seed = [[${seed}]];
+    console.log(seed)
+  </script>
+
 </body>
 </html>
