--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -18,11 +18,27 @@ Link: https://imgur.com/a/6tV4pCo */
   --azul: #1d3daf;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	font-family: 'Ubuntu', sans-serif;
   box-sizing: border-box;
+}
+
+*::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+*::-webkit-scrollbar-thumb {
+  background: var(--verde-oscuro);
+  border-radius: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
 }
 
 img {
