--- a/src/main/resources/static/css/semilla.css
+++ b/src/main/resources/static/css/semilla.css
@@ -18,11 +18,27 @@ Link: https://imgur.com/a/6tV4pCo */
   --azul: #1D3DAF;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	font-family: 'Ubuntu', sans-serif;
   box-sizing: border-box;
+}
+
+*::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+*::-webkit-scrollbar-thumb {
+  background: var(--verde-oscuro);
+  border-radius: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -45,7 +61,6 @@ nav {
 }
 
 main {
-	/* border: 1px solid red; */
 	margin: 3rem 4rem 0;
 	display: flex;
 	flex-direction: column;
@@ -68,7 +83,6 @@ main {
 
 .volver span {
 	margin-left: 8px;
-	/* font-size: 20px; */
 	font-weight: 400;
 	line-height: 23px;
 	color: var(--verde-oscuro);
@@ -77,10 +91,9 @@ main {
 .datos-semilla {
 	background-color: var(--blanco1);
 	width: 85%;
-	padding: 2rem 5rem;
+	padding: 2.5rem 5rem;
 	border-radius: 1rem;
 	box-shadow: 0px 4px 4px rgba(23, 23, 23, 0.15);
-	/* font-size: 20px; */
 	line-height: 23px;
 
 	display: grid;
@@ -91,7 +104,6 @@ main {
 }
 
 .datos-semilla div {
-	/* border: 1px solid red; */
 	display: flex;
 }
 
@@ -112,6 +124,8 @@ main {
 	font-weight: 500;
 }
 
+/* observaciones */
+
 .observaciones-menu {
 	width: 70%;
 	padding: 0.75rem 1.5rem;
@@ -125,19 +139,25 @@ main {
 	border-radius: 1rem;
 }
 
-.observaciones-menu::after {
-	content: url('../img/icons/Triangle-down-darkgrey.svg');
+.observaciones-arrow.active {
+	transform: rotate(180deg);
 }
 
+/* oculto */
 .observaciones-form-container {
-	position: absolute;
-	width: 63%;
-	margin-top: 1rem;
+	width: 70%;
+	display: none;
+}
+
+/* visible */
+.observaciones-form-container.active {
+	display: block;
 }
 
 .observaciones-form {
 	display: flex;
 	flex-direction: column;
+	gap: 1.5rem;
 }
 
 .observaciones-form textarea {
@@ -152,7 +172,6 @@ main {
 }
 
 .observaciones-form button {
-	margin-top: 1rem;
 	margin-left: auto;
 	padding: .4rem 4rem;
 	font-weight: 500;
@@ -160,4 +179,160 @@ main {
 	border-radius: 100px;
 	color: var(--verde-oscuro);
 	user-select: none;
+}
+
+.tabs-semilla {
+	margin-top: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: .8rem;
+}
+
+.button-datos-personales,
+.button-datos-de-contacto,
+.button-modificar-estado,
+.button-asignar-proyecto,
+.button-certificado,
+.button-recomendada {
+	width: 190px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: .5rem;
+	border: 1px solid var(--naranja-oscuro);
+	border-radius: 100px;
+	background: transparent;
+	color: var(--naranja-oscuro);
+	line-height: 17.13px;
+}
+
+.button-datos-personales.active,
+.button-datos-de-contacto.active,
+.button-modificar-estado.active,
+.button-asignar-proyecto.active,
+.button-certificado.active,
+.button-recomendada.active {
+	background: var(--naranja-oscuro);
+	border: 1px solid var(--naranja-oscuro);
+	color: var(--blanco1);
+}
+
+.img-datos-personales {
+	/* content: url('/img/icons/Person.svg'); */
+	content: url('../img/icons/Person.svg');
+}
+.img-datos-de-contacto {
+	/* content: url('/img/icons/Email.svg'); */
+	content: url('../img/icons/Email.svg');
+}
+.img-modificar-estado {
+	/* content: url('/img/icons/State.svg'); */
+	content: url('../img/icons/State.svg');
+}
+.img-asignar-proyecto {
+	/* content: url('/img/icons/Assign.svg'); */
+	content: url('../img/icons/Assign.svg');
+}
+.img-certificado {
+	/* content: url('/img/icons/Certificate.svg'); */
+	content: url('../img/icons/Certificate.svg');
+}
+.img-recomendada {
+	/* content: url('/img/icons/Star.svg'); */
+	content: url('../img/icons/Star.svg');
+}
+
+.img-datos-personales.active,
+.img-datos-de-contacto.active,
+.img-modificar-estado.active,
+.img-asignar-proyecto.active,
+.img-certificado.active,
+.img-recomendada.active {
+	filter: brightness(0) invert(1);
+}
+
+/* tab datos personales */
+.tab-datos-personales {
+	display: none;
+	justify-content: center;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.5rem;
+	background-color: var(--blanco1);
+	width: 85%;
+	padding: 2.5rem 5rem;
+	border-radius: 1rem;
+	box-shadow: 0px 4px 4px rgba(23, 23, 23, 0.15);
+	line-height: 23px;
+}
+
+.tab-datos-personales.active {
+	display: grid;
+}
+
+.tab-datos-personales div {
+	padding: 1rem;
+	position: relative;
+	display: flex;
+	align-items: center;
+	border: 1px solid var(--gris);
+	border-radius: 8px;
+}
+
+.tab-datos-personales .tab-campo {
+	position: absolute;
+	top: -12px;
+	left: 18px;
+	padding: 0 5px;
+	font-size: 14px;
+	color: var(--gris-oscuro);
+	background-color: var(--blanco1);
+	user-select: none;
+}
+
+.tab-datos-personales .tab-valor {
+	color: var(--negro);
+}
+
+/* tab datos de contacto */
+.tab-datos-de-contacto {
+	display: none;
+	justify-content: center;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 1.5rem;
+	background-color: var(--blanco1);
+	width: 85%;
+	padding: 2.5rem 5rem;
+	border-radius: 1rem;
+	box-shadow: 0px 4px 4px rgba(23, 23, 23, 0.15);
+	line-height: 23px;
+}
+
+.tab-datos-de-contacto.active {
+	display: grid;
+}
+
+.tab-datos-de-contacto div {
+	padding: 1rem;
+	position: relative;
+	display: flex;
+	align-items: center;
+	border: 1px solid var(--gris);
+	border-radius: 8px;
+}
+
+.tab-datos-de-contacto .tab-campo {
+	position: absolute;
+	top: -12px;
+	left: 18px;
+	padding: 0 5px;
+	font-size: 14px;
+	color: var(--gris-oscuro);
+	background-color: var(--blanco1);
+	user-select: none;
+}
+
+.tab-datos-de-contacto .tab-valor {
+	color: var(--negro);
 }
