--- a/src/main/resources/templates/pages/semilla.html
+++ b/src/main/resources/templates/pages/semilla.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- TITLE -->
-    <title>Semilla</title>
+    <title>SEMILLA | SIGIS</title>
 
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="/img/logo.png" />
@@ -66,28 +66,198 @@
     </div>
 
     <!-- observaciones -->
-    <button data-ripple-light="true" data-popover-target="menu" class="observaciones-menu">Observaciones generales
+    <button class="observaciones-menu">Observaciones generales
+      <img class="observaciones-arrow" src="../../static/img/icons/Triangle-down-darkgrey.svg" alt="expand">
     </button>
-
-    <div role="menu" data-popover="menu" data-popover-placement="bottom" class="observaciones-form-container">
-      <form role="menuitem" class="observaciones-form">
-        <!-- <input role="menuitem" type="text"> -->
-        <textarea role="menuitem" name="observacion" cols="1" rows="4"></textarea>
-        <button role="menuitem" type="submit">Enviar</button>
+    
+    <div class="observaciones-form-container">
+      <form class="observaciones-form">
+        <textarea name="observacion" cols="1" rows="4"></textarea>
+        <button type="submit">Enviar</button>
       </form>
     </div>
+
+    <!-- tabs semilla -->
+    <div class="tabs-semilla">
+      <button class="button-datos-personales">
+        <div class="img-datos-personales"></div>
+        <span>Datos personales</span>
+      </button>
+      
+      <button class="button-datos-de-contacto">
+        <div class="img-datos-de-contacto"></div>
+        <span>Datos de contacto</span>
+      </button>
+      
+      <button class="button-modificar-estado">
+        <div class="img-modificar-estado"></div>
+        <span>Modificar estado</span>
+      </button>
+      
+      <button class="button-asignar-proyecto">
+        <div class="img-asignar-proyecto"></div>
+        <span>Asignar proyecto</span>
+      </button>
+      
+      <button class="button-certificado">
+        <div class="img-certificado"></div>
+        <span>Certificado</span>
+      </button>
+      
+      <button class="button-recomendada">
+        <div class="img-recomendada"></div>
+        <span>Recomendada</span>
+      </button>
+    </div>
+
+    <!-- tab datos personales -->
+    <div class="tab-datos-personales">
+      <div>
+        <span class="tab-campo">Fecha de nacimiento</span>
+        <span class="tab-valor">05/12/1997</span>
+      </div>
+      
+      <div>
+        <span class="tab-campo">DNI / Pasaporte</span>
+        <span class="tab-valor">40.408.469</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Género</span>
+        <span class="tab-valor">Mujer</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Ciudad</span>
+        <span class="tab-valor">Godoy Cruz</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Provincia</span>
+        <span class="tab-valor">Mendoza</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">País</span>
+        <span class="tab-valor">Argentina</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Marca temporal</span>
+        <span class="tab-valor">21/03/2023 | 14:53:36</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">¿Cómo conoció al semillero?</span>
+        <span class="tab-valor">LinkedIn</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Otros estudios</span>
+        <span class="tab-valor">Administración de empresas</span>
+      </div>
+    </div>
+
+    <!-- tab datos de contacto -->
+    <div class="tab-datos-de-contacto">
+      <div>
+        <span class="tab-campo">Teléfono</span>
+        <span class="tab-valor">2616587001</span>
+      </div>
+      
+      <div>
+        <span class="tab-campo">Correo electrónico</span>
+        <span class="tab-valor">correoelectronico@gmail.com</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">Discord</span>
+        <span class="tab-valor">Agustina Palmarocchi#9875</span>
+      </div>
+
+      <div>
+        <span class="tab-campo">LinkedIn</span>
+        <span class="tab-valor">https://www.linkedin.com/in/asdasd</span>
+      </div>
+    </div>
     
-  </div>
+    <!-- <div class="w-2/3">
+      <div class="relative right-0">
+        <ul
+          class="relative flex list-none flex-wrap rounded-xl bg-blue-gray-50/60 p-1"
+          data-tabs="tabs"
+          role="list"
+        >
+          <li class="z-30 flex-auto text-center">
+            <a
+              class="text-slate-700 z-30 mb-0 flex w-full cursor-pointer items-center justify-center rounded-lg border-0 bg-inherit px-0 py-1 transition-all ease-in-out"
+              data-tab-target=""
+              active=""
+              role="tab"
+              aria-selected="true"
+              aria-controls="app"
+            >
+              <span class="ml-1">App</span>
+            </a>
+          </li>
+          <li class="z-30 flex-auto text-center">
+            <a
+              class="text-slate-700 z-30 mb-0 flex w-full cursor-pointer items-center justify-center rounded-lg border-0 bg-inherit px-0 py-1 transition-all ease-in-out"
+              data-tab-target=""
+              role="tab"
+              aria-selected="false"
+              aria-controls="message"
+            >
+              <span class="ml-1">Messages</span>
+            </a>
+          </li>
+          <li class="z-30 flex-auto text-center">
+            <a
+              class="text-slate-700 z-30 mb-0 flex w-full cursor-pointer items-center justify-center rounded-lg border-0 bg-inherit px-0 py-1 transition-all ease-in-out"
+              data-tab-target=""
+              role="tab"
+              aria-selected="false"
+              aria-controls="settings"
+            >
+              <span class="ml-1">Settings</span>
+            </a>
+          </li>
+        </ul>
+        <div data-tab-content="" class="p-5">
+          <div class="block opacity-100" id="app" role="tabpanel">
+            <p class="block font-sans text-base font-light leading-relaxed text-inherit text-blue-gray-500 antialiased">
+              Because it's about motivating the doers. Because I'm here to follow
+              my dreams and inspire other people to follow their dreams, too.
+            </p>
+          </div>
+          <div class="hidden opacity-0" id="message" role="tabpanel">
+            <p class="block font-sans text-base font-light leading-relaxed text-inherit text-blue-gray-500 antialiased">
+              The reading of all good books is like a conversation with the finest
+              minds of past centuries.
+            </p>
+          </div>
+          <div class="hidden opacity-0" id="settings" role="tabpanel">
+            <p class="block font-sans text-base font-light leading-relaxed text-inherit text-blue-gray-500 antialiased">
+              Comparing yourself to others is the thief of joy.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    
   </main>
+
+  <div style="height: 20vh;"></div>
   
   <!-- SCRIPTS -->
   
-  <script src="/js/script.js"></script>
-  <!-- <script src="../../static/js/script.js"></script> -->
+  <!-- <script src="/js/semilla.js"></script> -->
+  <script src="../../static/js/semilla.js"></script>
 
   <!-- MATERIAL TAILWIND CDN -->
   <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
-  <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script>
+  <!-- <script type="module" src="https://unpkg.com/@material-tailwind/html@latest/scripts/popover.js"></script> -->
+  <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/tabs.js"></script>
 </body>
 
 </html>
